      requests.  See the description in Defaults.py for more details.

  i18n

    - The Japanese translation has been updated by Yasuhito FUTATSUKI.

    - Also thanks to Miloslav Trmac and Yasuhito FUTATSUKI, the l10n for
      Mailman's bin/ commands has been fixed to display using the character
      set of the user's work station even when Mailman's character set for
      the language is different.  (LP: #558167)

    - The Polish translation has been updated by Stefan Plewako.

    - The German translation has been updated by Mirian Margiani and
      Bernhard Schmidt.

    - The Russian translation has been updated by Danil Smirnov.

    - Several Galician templates that were improperly encoded as iso-8859-1
      have been fixed.  (LP: #1532504)

    - The Brazilian Portugese translation has been updated by Emerson Ribeiro
      de Mello.

  Bug fixes and other patches

    - If DMARC lookup fails to find a policy, also try the Organizational
      Domain.  Associated with this is a new mm_cfg.py setting
      DMARC_ORGANIZATIONAL_DOMAIN_DATA_URL which sets the URL used to
      retrieve the data for the algorithm that computes the Organizational
      Domain.  See https://publicsuffix.org/list/ for info.  (LP: #1549420)

    - Modified contrib/mmdsr to correctly report No such list names that
      contain ".

    - User's "Acknowledge" option will now be honored for posts to anonymous
      lists.  (LP: #1546679)

    - Fixed a typo in the Non-digest options regular_exclude_ignore
      description thanks to Yasuhito FUTATSUKI.

    - DEFAULT_PASS_MIME_TYPES has been changed to accept text/plain sub-parts
      from message/rfc822 parts and multipart parts other than mixed and
      alternative and also accept pgp signatures.  This only applies to newly
      created lists and other than pgp signatures, still only accepts
      text/plain.  (LP: #1517446)

    - Modified contrib/mmdsr to report held and banned subscriptions and DMARC